--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 800px) {
 
     main {
         display: grid;
